[package]
name = "proxy-rs"
version = "0.4.0"
edition = "2021"
readme = "README.md"
description = "High-performance proxy management with REST API and hot-reload configuration"
repository = "https://github.com/duan78/proxy-rs"
license = "MIT"
keywords = ["proxy", "api", "rest", "hot-reload", "scraper", "checker", "server"]
categories = ["command-line-utilities"]
exclude = ["/data"]
authors = ["duan78"]

[[bin]]
name = "proxy-rs"
path = "src/main.rs"

[lib]
name = "proxy_rs"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
regex = "1.11"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = { version = "5.0", features = ["stderr"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "time", "io-std", "fs", "macros", "signal"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2"
tokio-util = { version = "0.7", features = ["compat"] }
hickory-resolver = "0.24.1"
url = "2.5"
bytes = "1.5"
hyper = { version = "1.7", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "server"] }
hyper-tls = "0.6"
futures-util = "0.3"
lazy_static = "1.5"
dashmap = "6.1"
rand = "0.8"
num_cpus = "1.16"
parking_lot = "0.12"
lru = "0.12"
thiserror = "1.0"
once_cell = "1.19"

# API REST Dependencies (simplified for Windows ARM64 compatibility)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# jsonwebtoken = "8.3" # Temporarily disabled due to Windows ARM64 compilation issues
notify = "6.1"
toml = "0.8"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
anyhow = "1.0"
maxminddb = "0.26"
async_once = "0.2"
byteorder = "1.5"
async-recursion = "1.1"
concurrent-queue = "2.5"
directories = "6.0"
md5 = "0.7"
async-compression = "0.4"
indicatif = "0.17"
httparse = "1.9"
flate2 = "1.0"